# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.display") {
  sources = [
    "cj_display_common.cj",
    "cj_display_enum.cj",
    "cj_display_log.cj",
    "display.cj",
  ]

  cj_external_deps = [
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "arkui_cangjie_api:ohos.base",
    "graphic_cangjie_api:ohos.graphics.color_space_manager",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  external_deps = [ "window_manager:cj_display_ffi" ]

  lib_name = "display"
}
