# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.window") {
  sources = [
    "cj_window_common.cj",
    "cj_window_enum.cj",
    "cj_window_log.cj",
    "cj_window_utils.cj",
    "window.cj",
    "window_stage.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "hiviewdfx_cangjie_api:ohos.hilog",
    "multimedia_cangjie_api:ohos.image",
    "cangjie_api:ohos.labels",    
  ]

  external_deps = [ "window_manager:cj_window_ffi" ]

  subsystem_name = "window"
  part_name = "window_cangjie_api"
  lib_name = "window"
}
