# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.window") {
  sources = [
    "cj_window_common.cj",
    "cj_window_enum.cj",
    "cj_window_log.cj",
    "cj_window_utils.cj",
    "window.cj",
    "window_stage.cj",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.app.ability",
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.business_exception",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "multimedia_cangjie_wrapper:ohos.multimedia.image",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "window_manager:cj_window_ffi",
  ]

  subsystem_name = "window"
  part_name = "window_cangjie_wrapper"
}
